--- a/.iflow/skills/python-project-builder-tdd/template/pyproject.toml
+++ b/.iflow/skills/python-project-builder-tdd/template/pyproject.toml
@@ -56,6 +56,12 @@ python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
 addopts = "-v --cov=src --cov-report=term-missing"
+markers = [
+    "unit: Unit tests (fast, isolated)",
+    "integration: Integration tests (medium speed, component interactions)",
+    "e2e: End-to-end tests (slow, complete workflows)",
+    "slow: Slow running tests",
+]
 
 [tool.coverage.run]
 source = ["src"]
